Test for iot component monitoring